# profile

./: .dockerignore  Cargo.toml  Dockerfile  README.md  audit.toml  switch_branch.sh
.github/workflows/: build.yml
docs/: gpu-setup.md  ground-truth-metrics.md  index.html  roadmap.md
scripts/: gpu-setup.sh  start.sh  test.sh  test2.sh
src/: lib.rs  main.rs
src/cli/: diagnose.rs  info.rs  mod.rs  run.rs
src/cmd/: info.rs
src/collectors/: gpu.rs  mod.rs  power.rs  sampler.rs  tokens.rs  types.rs  vllm.rs
src/engine/: mod.rs
src/profiler/: mod.rs
tests/: cli_tests.rs
